<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movieDetailContentHeaderGuidelineVStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="14dp" />

        <TextView
            android:id="@+id/movieDetailContentOpeningCrawlText"
            style="@style/TextStyleDark.SmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movie_opening_craw"
            app:layout_constraintStart_toStartOf="@+id/movieDetailContentHeaderGuidelineVStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieDetailContentDescription"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:lineSpacingExtra="2sp"
            android:textSize="@dimen/TextSizeDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movieDetailContentHeaderGuidelineVStart"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailContentOpeningCrawlText"
            tools:text="It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire. During the battle, Rebel spies managed to steal secret plans to the Empire's ultimate weapon, the DEATH STAR, an armored space station with enough power to destroy an entire planet. Pursued by the Empire's sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy..." />

        <TextView
            android:id="@+id/movieDetailContentCreatedText"
            style="@style/TextStyleDark.SmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/movie_created"
            app:layout_constraintStart_toStartOf="@+id/movieDetailContentHeaderGuidelineVStart"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailContentDescription" />

        <TextView
            android:id="@+id/movieDetailContentCreated"
            style="@style/TextStyleDark.SmallDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/movieDetailContentEditedText"
            app:layout_constraintStart_toStartOf="@+id/movieDetailContentHeaderGuidelineVStart"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailContentCreatedText"
            tools:text="1977/05/25" />

        <TextView
            android:id="@+id/movieDetailContentEditedText"
            style="@style/TextStyleDark.SmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="14dp"
            android:text="@string/movie_edited"
            app:layout_constraintEnd_toEndOf="@+id/movieDetailContentDescription"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/movieDetailContentCreatedText"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailContentDescription" />

        <TextView
            android:id="@+id/movieDetailContentEdited"
            style="@style/TextStyleDark.SmallDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/movieDetailContentDescription"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/movieDetailContentEditedText"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailContentCreatedText"
            tools:text="1977/05/25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>